--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -63,10 +63,10 @@
             <form class="nav-item navbar-form mr-2 py-md-2" role="search" method="get" id="searchform"
                   action="{% url 'blog:search_view' %}">
                 <div class="input-group">
-                    <input type="search" name="q" class="form-control rounded-0" placeholder="站内搜索" autocomplete="off"
+                    <input type="search" name="q" class="form-control" placeholder="站内搜索" autocomplete="off"
                            required=True>
                     <div class="input-group-btn">
-                        <button class="btn btn-info rounded-0" type="submit"><i class="fa fa-search"></i></button>
+                        <button class="btn btn-info" type="submit"><i class="fa fa-search"></i></button>
                     </div>
                 </div><!-- /input-group -->
             </form>
