--- a/apps/blog/templates/blog/timeline.html
+++ b/apps/blog/templates/blog/timeline.html
@@ -25,7 +25,7 @@
             {% else %}
         <li class="timeline-inverted">{% endif %}
             <div class="timeline-badge {{ timeline.icon_color }}"><i class="{{ timeline.icon }}"></i></div>
-            <div class="timeline-panel">
+            <div class="timeline-panel rounded-6">
                 <div class="timeline-heading">
                     <h2 class="timeline-title text-info">{{ timeline.title }}</h2>
                     <p class="mb-1">
