--- a/apps/tool/templates/tool/tags/tool_item.html
+++ b/apps/tool/templates/tool/tags/tool_item.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-    <div class="card">
+    <div class="card rounded-6">
         <div class="card-header p-2 tool-header">
             <a href="{{ tool_item.url }}">
                 <img class="w-25 float-left mr-2" src="{{ tool_item.img }}"
