--- a/apps/blog/static/blog/css/night.css
+++ b/apps/blog/static/blog/css/night.css
@@ -11,64 +11,80 @@
 blockquote {
     background: #001d25;
 }
+
 .fa-github {
     color: #fff;
 }
+
 .text-muted {
-	color: #738292!important;
+    color: #738292 !important;
 }
+
 .text-secondary {
-	color: #738292;
+    color: #738292;
 }
+
 .card,
 .card-header,
 .list-group-item,
 .card-footer {
-	background-color: #18222d!important;
+    background-color: #18222d !important;
 }
+
 .dropdown-menu {
-	background: #18222d;
+    background: #18222d;
 }
+
 .dropdown-item {
-	color: #9caec7;
+    color: #9caec7;
 }
+
 .dropdown-item:focus, .dropdown-item:hover {
-	color: #9caec7;
-	background: #001d25;
+    color: #9caec7;
+    background: #001d25;
 }
+
 .breadcrumb {
-	background-color: #18222d!important;
+    background-color: #18222d !important;
 }
+
 .breadcrumb-item.active {
-	color: #738292;
+    color: #738292;
 }
+
 .form-control {
-	background: #18222d;
-	color: #9caec7;
-	border: 1px solid #738292;
+    background: #18222d;
+    color: #9caec7;
+    border: 1px solid #738292;
 }
+
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
     color: #9caec7;
     background-color: #18222d;
     border-color: #738292 #738292 #18222d;
 }
+
 .nav-tabs {
-	border-bottom: 1px solid #738292;
+    border-bottom: 1px solid #738292;
 }
+
 .table {
-	color: #9caec7;
+    color: #9caec7;
 }
+
 .table .thead-light th {
-	color: #ccc;
+    color: #ccc;
     background-color: #22303f;
 }
+
 .codehilite {
-	background: #2b2b2b;
+    background: #2b2b2b;
     border-radius: 8px;
 }
+
 .description {
-	background: #18222d!important;
+    background: #18222d !important;
 }
 
 #home-card .card-header strong,
@@ -79,6 +95,7 @@ blockquote {
 #friends-card .card-header strong {
     border-bottom: 2px solid #9caec7;
 }
+
 #home-card .card-header,
 #tag-card .card-header,
 .description h1,
@@ -88,8 +105,8 @@ blockquote {
 }
 
 body {
-	background: #22303f;
-	color: #9caec7;
+    background: #22303f;
+    color: #9caec7;
 }
 
 /* 导航 */
@@ -100,15 +117,16 @@ body {
 }
 
 .blog-navbar {
-	background: #18222d!important;
+    background: #18222d !important;
 }
 
-.summary-list .media {
-	background-color: #18222d;
+.summary-list .article-block {
+    background-color: #18222d;
 }
+
 .choice .active {
-	color: #9caec7;
-	border-bottom: 2px solid #9caec7;
+    color: #9caec7;
+    border-bottom: 2px solid #9caec7;
 }
 
 .category-item:before {
@@ -117,69 +135,81 @@ body {
 
 /*footer*/
 footer {
-	background: #18222d;
-	color: #9caec7;
+    background: #18222d;
+    color: #9caec7;
 }
 
 /* tool */
 .tool-list a:hover,
 .tool-list .card-title:hover {
-	color: #ccc;
+    color: #ccc;
 }
+
 .tool-cate .card-header {
     border-bottom: 2px solid #001d25;
 }
+
 pre {
     background: #2b2b2b;
-	color: #9caec7;
+    color: #9caec7;
     border-radius: 8px;
 }
+
 #html-cha .table {
-    background: #18222d!important;
+    background: #18222d !important;
 }
+
 #html-cha .table th {
     color: #fff;
 }
 
 /* notification */
-.cbp_tmtimeline>li:nth-child(odd) .cbp_tmlabel,
-.cbp_tmtimeline>li .cbp_tmlabel {
+.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel,
+.cbp_tmtimeline > li .cbp_tmlabel {
     background: #18222d;
-	color: #9caec7;
+    color: #9caec7;
 }
+
 #notes-main .active {
-    background-color: #17a2b8!important;
+    background-color: #17a2b8 !important;
 }
+
 #notes-main .list-group-item {
-	border: 1px solid #9caec7;
+    border: 1px solid #9caec7;
 }
-.cbp_tmtimeline>li .cbp_tmlabel:after,
-.cbp_tmtimeline>li:nth-child(odd) .cbp_tmlabel:after {
-	border-right-color: #18222d;
+
+.cbp_tmtimeline > li .cbp_tmlabel:after,
+.cbp_tmtimeline > li:nth-child(odd) .cbp_tmlabel:after {
+    border-right-color: #18222d;
 }
 
 /* detail */
 .article-body h2 {
     background: #001d25;
 }
+
 .editor-btns .btn {
     background: #18222d;
 }
+
 .CodeMirror {
     color: #333;
 }
+
 .editor-toolbar a {
-    color: #9caec7!important;
+    color: #9caec7 !important;
 }
 
 /* Timeline */
 .timeline-panel {
-    background:#18222d;
+    background: #18222d;
 }
+
 .timeline > li > .timeline-panel:after {
     border-left: 14px solid #18222d;
     border-right: 0 solid #18222d;
 }
+
 .timeline > li > .timeline-panel:before {
     border-left: 15px solid #fff;
     border-right: 0 solid #fff;
