--- a/apps/blog/static/blog/css/night.css
+++ b/apps/blog/static/blog/css/night.css
@@ -86,6 +86,12 @@ blockquote {
 .description {
     background: #18222d !important;
 }
+#home-card,
+#category-card,
+#tag-card,
+#friends-card {
+    background: #2b2b2b;
+}
 
 #home-card .card-header strong,
 #tag-card .card-header strong,
