--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -3,7 +3,7 @@
 
 <!--个人空间-->
 <div class="card border-0 rounded-6 px-3 mb-2 mb-md-3 d-none d-lg-block" id="home-card">
-    <div class="card-header bg-white px-0">
+    <div class="card-header bg-none px-0">
         <strong><i class="fa fa-paper-plane mr-2 f-17"></i>博客空间</strong>
         <img class="float-right" id="theme-img"
         {% if not request.COOKIES.toggleTheme %}
@@ -47,7 +47,7 @@
 </div>
 <!--文章分类-->
 <div class="card border-0 rounded-6 px-3 mb-2 mb-md-3" id="category-card">
-    <div class="card-header bg-white px-0">
+    <div class="card-header bg-none px-0">
         <strong><i class="fa fa-book mr-2 f-17"></i>文章分类</strong>
     </div>
     {% get_category_list as categories %}
@@ -63,7 +63,7 @@
 </div>
 <!--标签云-->
 <div class="card border-0 rounded-6 px-3 mb-2 mb-md-3" id="tag-card">
-    <div class="card-header bg-white px-0">
+    <div class="card-header bg-none px-0">
         <strong><i class="fa fa-tags mr-2 f-17"></i>标&nbsp;签&nbsp;云</strong>
     </div>
     <div class="card-body px-0 py-3">
@@ -79,7 +79,7 @@
 <!--友链-->
 <div class="d-none d-lg-block">
     <div class="card border-0 rounded-6 px-3 mb-2 mb-md-3" id="friends-card">
-        <div class="card-header bg-white px-0">
+        <div class="card-header bg-none px-0">
             <strong><i class="fa fa-link mr-2 f-17"></i>友情链接</strong>
         </div>
         <div class="card-body px-0 py-3">
