修改页面扁平化设计

--- a/apps/blog/templates/blog/tags/reward.html
+++ b/apps/blog/templates/blog/tags/reward.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="text-center">
-    <button class="btn btn-danger rounded-0" data-toggle="collapse" data-target=".multi-collapse"
+    <button class="btn btn-danger" data-toggle="collapse" data-target=".multi-collapse"
             aria-expanded="false" aria-controls="sponsor-zfb sponsor-wx"
             style="line-height: 1;font-size: .8rem;">
         <i class="fa fa-cny"></i>
