--- a/apps/tool/templates/tool/bd_push_site.html
+++ b/apps/tool/templates/tool/bd_push_site.html
@@ -25,21 +25,21 @@
 <div class="mb-3">
     <div class="form-group">
         <label>接口调用地址：</label>
-        <input type="url" class="form-control rounded-0" id="form-url"
+        <input type="url" class="form-control" id="form-url"
                placeholder="例：http://data.zz.baidu.com/urls?site=www.example.com&token=NpU0****tTQAlBV"
                required>
         <small class="form-text text-muted">注：请填写百度站长平台提供给您的接口调用地址</small>
     </div>
     <div class="form-group">
         <label>Sitemap地址：</label>
-        <input type="url" class="form-control rounded-0" id="form-sitemap"
+        <input type="url" class="form-control" id="form-sitemap"
                placeholder="例：http://www.example.com/sitemap.xml"
                required>
         <small class="form-text text-muted">注：规范的sitemap网页的链接应该包含在&lt;loc&gt;标签中，否则无法提取到链接</small>
     </div>
-    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-push">开始推送</button>
+    <button type="submit" class="btn btn-info btn-sm" id="start-push">开始推送</button>
 </div>
-<div class="card mb-3 rounded-0">
+<div class="card mb-3">
     <div class="card-header text-center text-info font-weight-bold py-2">推送结果</div>
     <div class="card-body table-responsive push-result text-center py-3">结果显示区</div>
 </div>
