--- a/apps/tool/templates/tool/docker_search.html
+++ b/apps/tool/templates/tool/docker_search.html
@@ -21,14 +21,14 @@
 <div class="mb-3">
     <div class="form-group">
         <label>输入镜像名称：</label>
-        <input type="url" class="form-control rounded-0" id="image-name"
+        <input type="url" class="form-control" id="image-name"
                placeholder="例：nginx 或者 hopetree/izone"
                required>
         <small class="form-text text-muted">注：nginx 为官方维护的镜像；jenkins/jenkins 是 Jenkins 维护的镜像，比官方维护的更好</small>
     </div>
-    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-push">开始查询</button>
+    <button type="submit" class="btn btn-info btn-sm" id="start-push">开始查询</button>
 </div>
-<div class="card mb-0 rounded-0">
+<div class="card mb-0">
     <div class="card-header text-center text-info font-weight-bold py-2">查询结果</div>
     <div class="card-body table-responsive push-result text-center p-2"><div class="py-2">结果显示区</div></div>
 </div>
