--- a/apps/tool/templates/tool/tax.html
+++ b/apps/tool/templates/tool/tax.html
@@ -46,7 +46,7 @@
         <div class="input-group-append"><span class="input-group-text f-16">.00</span></div>
     </div>
     <div class="mb-3">
-        <button type="submit" class="btn btn-info btn-sm rounded-0 f-16" id="start-tax">开始计算</button>
+        <button type="submit" class="btn btn-info btn-sm f-16" id="start-tax">开始计算</button>
     </div>
 {% endblock %}
 
