--- a/apps/tool/templates/tool/useragent.html
+++ b/apps/tool/templates/tool/useragent.html
@@ -58,9 +58,9 @@
             </div>
         </div>
     </form>
-    <button type="submit" class="btn btn-info btn-sm rounded-0" id="get_useragent">生成 User-Agent</button>
+    <button type="submit" class="btn btn-info btn-sm" id="get_useragent">生成 User-Agent</button>
 </div>
-<div class="card mb-3 rounded-0">
+<div class="card mb-3">
     <div class="card-header text-center text-info font-weight-bold py-2">User-Agent</div>
     <div class="card-body push-result text-center p-3">结果显示区</div>
 </div>
