--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -18,7 +18,7 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="btn btn-info btn-sm rounded-0 mb-1" type="submit" value="{% trans 'Reset My Password' %}" />
+        <input class="btn btn-info btn-sm mb-1" type="submit" value="{% trans 'Reset My Password' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
