--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -14,7 +14,7 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input class="btn btn-info btn-sm rounded-0" type="submit" name="action" value="{% trans 'change password' %}"/>
+                <input class="btn btn-info btn-sm" type="submit" name="action" value="{% trans 'change password' %}"/>
             </form>
         {% else %}
             <p>{% trans 'Your password is now changed.' %}</p>
