--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -10,6 +10,6 @@
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="btn btn-info btn-sm rounded-0" type="submit" name="action" value="{% trans 'Set Password' %}"/>
+        <input class="btn btn-info btn-sm" type="submit" name="action" value="{% trans 'Set Password' %}"/>
     </form>
 {% endblock %}
