--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -16,7 +16,7 @@
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
     {% endif %}
     <a class="secondaryAction" href="{{ login_url }}">已有账号登录</a>
-    <button class="pull-right btn btn-info btn-sm rounded-0" type="submit">{% trans "Sign Up" %}</button>
+    <button class="pull-right btn btn-info btn-sm" type="submit">{% trans "Sign Up" %}</button>
 </form>
 
 {% endblock %}
