--- a/apps/oauth/templates/oauth/change_profile.html
+++ b/apps/oauth/templates/oauth/change_profile.html
@@ -17,21 +17,21 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-8 col-md-6 offset-sm-2 offset-md-3 px-xl-5">
-            <div class="card rounded-0 px-3 px-lg-4">
+            <div class="card px-3 px-lg-4">
                 <div class="card-header text-center bg-white py-2"><h3 class="my-1 text-info">修改资料</h3></div>
                 <div class="card-body">
                     <form class="change_profile" method="post" enctype="multipart/form-data"
                           action="{% url 'oauth:change_profile'%}">
                         {% csrf_token %}
                         {{ form|crispy }}
-                        <button class="btn btn-info btn-sm rounded-0" type="submit">更新资料</button>
+                        <button class="btn btn-info btn-sm" type="submit">更新资料</button>
                     </form>
                 </div>
                 <div class="text-center mb-5" id="social-login">
                     <div class="login-title"><span>更多操作</span></div>
                     <div class="more-link mt-3">
-                        <a class="btn btn-info btn-sm rounded-0 mx-3" href="{% url 'oauth:profile' %}">查看资料</a>
-                        <a class="btn btn-info btn-sm rounded-0 mx-3" href="{% url 'account_change_password' %}">修改密码</a>
+                        <a class="btn btn-info btn-sm mx-3" href="{% url 'oauth:profile' %}">查看资料</a>
+                        <a class="btn btn-info btn-sm mx-3" href="{% url 'account_change_password' %}">修改密码</a>
                     </div>
                 </div>
             </div>
