--- a/apps/oauth/templates/oauth/profile.html
+++ b/apps/oauth/templates/oauth/profile.html
@@ -18,7 +18,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-8 col-md-6 offset-sm-2 offset-md-3 px-xl-5">
-            <div class="card rounded-0 px-3 px-lg-4">
+            <div class="card px-3 px-lg-4">
                 <div class="card-header text-center bg-white py-2"><h3 class="my-1 text-info">个人资料</h3></div>
                 <div class="card-body">
                     <ul class="list-group">
@@ -47,9 +47,9 @@
                 <div class="text-center mb-5" id="social-login">
                     <div class="login-title"><span>更多操作</span></div>
                     <div class="more-link mt-3">
-                        <a class="btn btn-info btn-sm rounded-0 mx-lg-3 mx-sm-2" href="{% url 'oauth:change_profile' %}">修改资料</a>
-                        <a class="btn btn-info btn-sm rounded-0 mx-lg-3 mx-sm-2" href="{% url 'account_change_password' %}">修改密码</a>
-                        <a class="btn btn-info btn-sm rounded-0 mx-lg-3 mx-sm-2" href="{% url 'account_email' %}">邮箱验证</a>
+                        <a class="btn btn-info btn-sm mx-lg-3 mx-sm-2" href="{% url 'oauth:change_profile' %}">修改资料</a>
+                        <a class="btn btn-info btn-sm mx-lg-3 mx-sm-2" href="{% url 'account_change_password' %}">修改密码</a>
+                        <a class="btn btn-info btn-sm mx-lg-3 mx-sm-2" href="{% url 'account_email' %}">邮箱验证</a>
                     </div>
                 </div>
             </div>
