--- a/apps/tool/templates/tool/bd_push.html
+++ b/apps/tool/templates/tool/bd_push.html
@@ -25,20 +25,20 @@
 <div class="mb-3">
     <div class="form-group">
         <label>接口调用地址：</label>
-        <input type="url" class="form-control rounded-0" id="form-url"
+        <input type="url" class="form-control" id="form-url"
                placeholder="例：http://data.zz.baidu.com/urls?site=www.example.com&token=NpU0****tTQAlBV"
                required>
         <small class="form-text text-muted">注：请填写百度站长平台提供给您的接口调用地址</small>
     </div>
     <div class="form-group">
         <label>网址链接：</label>
-        <textarea class="form-control rounded-0" id="form-urls" rows="5" required
+        <textarea class="form-control" id="form-urls" rows="5" required
                   placeholder="示例如下：&#10;http://www.example.com/mip/&#10;http://www.example.com/mip/1.html&#10;http://www.example.com/mip/2.php"></textarea>
         <small class="form-text text-muted">注：提交的链接的域名必须与接口中site保持一直才能推送成功</small>
     </div>
-    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-push">开始推送</button>
+    <button type="submit" class="btn btn-info btn-sm" id="start-push">开始推送</button>
 </div>
-<div class="card mb-3 rounded-0">
+<div class="card mb-3">
     <div class="card-header text-center text-info font-weight-bold py-2">推送结果</div>
     <div class="card-body table-responsive push-result text-center py-3">结果显示区</div>
 </div>
