--- a/apps/tool/templates/tool/regex.html
+++ b/apps/tool/templates/tool/regex.html
@@ -19,15 +19,15 @@
 <div class="mb-3">
     <div class="form-group">
         <label>待匹配信息：</label>
-        <textarea class="form-control rounded-0" id="form-text" rows="8" required></textarea>
+        <textarea class="form-control" id="form-text" rows="8" required></textarea>
     </div>
     <div class="form-group">
         <label>正则表达式：</label>
-        <input type="url" class="form-control rounded-0" id="form-regex" placeholder="例： [a-zA-z]+://[\S]*" required>
+        <input type="url" class="form-control" id="form-regex" placeholder="例： [a-zA-z]+://[\S]*" required>
     </div>
-    <button type="submit" class="btn btn-info btn-sm rounded-0" id="start-re">开始匹配</button>
+    <button type="submit" class="btn btn-info btn-sm" id="start-re">开始匹配</button>
 </div>
-<div class="card mb-3 rounded-0">
+<div class="card mb-3">
     <div class="card-header text-center text-info font-weight-bold py-2">匹配结果</div>
     <div class="card-body table-responsive push-result text-center p-3">结果显示区</div>
 </div>
