--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -32,9 +32,9 @@
   {% endfor %}
 
 <div class="buttonHolder">
-      <button class="btn btn-secondary btn-sm rounded-0" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="btn btn-secondary btn-sm rounded-0" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="btn btn-info btn-sm rounded-0" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+      <button class="btn btn-secondary btn-sm" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+      <button class="btn btn-secondary btn-sm" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+      <button class="btn btn-info btn-sm" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
 </div>
 
 </fieldset>
@@ -51,7 +51,7 @@
     <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-info btn-sm rounded-0" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        <button class="btn btn-info btn-sm" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
     </form>
 
 {% endblock %}
