--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -13,7 +13,7 @@
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
     {% endif %}
-    <button class="btn btn-info btn-sm rounded-0" type="submit">{% trans 'Sign Out' %}</button>
+    <button class="btn btn-info btn-sm" type="submit">{% trans 'Sign Out' %}</button>
 </form>
 
 
