--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -10,6 +10,6 @@
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-info btn-sm rounded-0" type="submit" name="action">{% trans "Change Password" %}</button>
+        <button class="btn btn-info btn-sm" type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
 {% endblock %}
