--- a/apps/blog/templates/blog/index.html
+++ b/apps/blog/templates/blog/index.html
@@ -24,7 +24,7 @@
                 <a class="pb-2 ml-4 {% if request.path == hot_index %}active{% endif %}" href="{{ hot_index }}">
                     <i class="fa fa-fire mr-1"></i>热度排序</a>
             </div>
-            {% load_article_summary articles %}
+            {% load_article_summary articles user %}
             {% if is_paginated %}{% load_pages %}{% endif %}
         </div>
         <div class="col-lg-4">
