--- a/apps/blog/templates/blog/category.html
+++ b/apps/blog/templates/blog/category.html
@@ -10,28 +10,39 @@
 {% endblock %}
 
 {% block base_content %}
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8">
-            <div class="description bg-white px-3 pt-3 pb-1">
-                <p class="float-right mb-0">共<span class="mx-2 text-info">{{ paginator.count }}</span>篇</p>
-                <h1 class="f-17"><strong>{{ search_tag }}：{{ search_instance.name }}</strong></h1>
-                <p class="f-16">{{ search_instance.description }}</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="description bg-white px-3 pt-3 pb-1">
+                    <p class="float-right mb-0">共<span class="mx-2 text-info">{{ paginator.count }}</span>篇</p>
+                    <h1 class="f-17"><strong>{{ search_tag }}：{{ search_instance.name }}</strong></h1>
+                    <p class="f-16">{{ search_instance.description }}</p>
+                    {% if user.is_superuser %}
+                        <p class="edit-category-tag f-12">
+                            <a href="{% url 'admin:blog_category_change' search_instance.pk %}"
+                               target="_blank"
+                               title="后台编辑{{ search_tag }}">
+                                <i class="fa fa-edit ml-2 mr-1"></i>编辑分类</a>
+                        </p>
+                    {% endif %}
+
+
+                </div>
+                <div class="text-secondary font-weight-bold py-3 f-15 choice">
+                    {% url 'blog:category' search_instance.slug as base_category %}
+                    {% url 'blog:category_hot' search_instance.slug as hot_category %}
+                    <a class="pb-2 {% if request.path == base_category %}active{% endif %}" href="{{ base_category }}">
+                        <i class="fa fa-bars mr-1"></i>时间排序</a>
+                    <a class="pb-2 ml-4 {% if request.path == hot_category %}active{% endif %}"
+                       href="{{ hot_category }}">
+                        <i class="fa fa-fire mr-1"></i>热度排序</a>
+                </div>
+                {% load_article_summary articles user %}
+                {% if is_paginated %}{% load_pages %}{% endif %}
             </div>
-            <div class="text-secondary font-weight-bold py-3 f-15 choice">
-                {% url 'blog:category' search_instance.slug as base_category %}
-                {% url 'blog:category_hot' search_instance.slug as hot_category %}
-                <a class="pb-2 {% if request.path == base_category %}active{% endif %}" href="{{ base_category }}">
-                    <i class="fa fa-bars mr-1"></i>时间排序</a>
-                <a class="pb-2 ml-4 {% if request.path == hot_category %}active{% endif %}" href="{{ hot_category }}">
-                    <i class="fa fa-fire mr-1"></i>热度排序</a>
+            <div class="col-lg-4">
+                {% include 'blog/tags/base_right.html' %}
             </div>
-            {% load_article_summary articles user %}
-            {% if is_paginated %}{% load_pages %}{% endif %}
-        </div>
-        <div class="col-lg-4">
-            {% include 'blog/tags/base_right.html' %}
         </div>
     </div>
-</div>
 {% endblock %}
