文章页面支持编辑文章

--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -116,7 +116,7 @@
             </div>
             <div class="col-lg-2 toc-block">
                 <div class="article-toc d-none d-lg-block f-13">
-                    <div class="toc-title">文章导航</div>
+                    <div class="toc-title">大纲</div>
                     {{ article.toc|safe }}
                 </div>
             </div>
