--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -13,7 +13,7 @@
 
 /* base css-------------------------------------------------*/
 body {
-    background: #f4f4f4;
+    background: #e5effd;
     padding-top: 4.8rem;
     display: -webkit-flex; /* Safari */
     display: flex;
