--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -83,7 +83,7 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
         <p class="mb-0">
             <a href="http://beian.miit.gov.cn/" target="_blank">{{ beian }}</a>&nbsp;|
             <a href="{% url 'django.contrib.sitemaps.views.sitemap' %}" target="_blank">Sitemap</a>
-            {% if cnzz_protocol %}|&nbsp;{{ cnzz_protocol|safe }}{% endif %}
+            {% if cnzz_protocol %}{% if '51.la' not in cnzz_protocol %}|&nbsp;{% endif %}{{ cnzz_protocol|safe }}{% endif %}
             <span id="web-day"></span>
         </p>
         <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2018-<span id="year-info"></span>
