--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -4,7 +4,7 @@
 <!--个人空间-->
 <div class="card border-0 rounded-6 px-3 mb-2 mb-md-3 d-none d-lg-block" id="home-card">
     <div class="card-header bg-none px-0">
-        <strong><i class="fa fa-paper-plane mr-2 f-17"></i>博客空间</strong>
+        <strong><i class="fa fa-flag mr-2 f-17"></i>博客空间</strong>
         <img class="float-right" id="theme-img"
         {% if not request.COOKIES.toggleTheme %}
             {% now_hour as hour %}
